[package]
name = "example_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
maybe-async = { version = "0.2", features = ["is_sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
